@@ -1,4 +1,8 @@
-﻿shmuel 08.04.2015 21:29:15 +0200 - build 504
+﻿shmuel 10.04.2015 01:00:29 +0200 - build 505
+
+1. Рефакторинг.
+
+shmuel 08.04.2015 21:29:15 +0200 - build 504
 
 1. Командная строка: символ '=' можно использовать также и при вызове файла-скрипта, то-есть перед
    символом '@'.
